Solved margin right issue and custom arrow not showing due to overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
 html {
     scroll-behavior: smooth;
 }
+
+.carousel-item {
+}
+
+.carousel-container {
+    position:static !important;
+    /* margin-right: -2.5rem; */
+    /* padding: 0 -5rem; */
+    /* margin: 0 5rem; */
+    /* overflow: visible !important; */
+}
+
+.react-multiple-carousel__arrow--right {
+    position: absolute !important;
+    right: 0rem !important;
+    /* margin-left: 5rem !important; */
+}
